--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test:coverage": "jest --coverage"
   },
   "devDependencies": {
+    "@liukewia/eslint-config": "^1.0.1",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.23",
     "chalk": "^5.0.1",
