--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "lint:fix": "pnpm run lint:script:fix && pnpm run lint:style:fix",
     "lint:script": "eslint . --ignore-path .gitignore",
     "lint:script:fix": "pnpm run lint:script -- --fix",
-    "lint:style": "stylelint '**/*.{css,less,scss}' --ignore-path .gitignore",
     "lint:style:fix": "pnpm run lint:style -- --fix",
-    "postinstall": "node npm-lifecycle/postinstall.js",
+    "prepare": "husky install",
     "publish:all": "pnpm lint && pnpm build && pnpm test && pnpm m publish",
     "test": "jest",
     "test:watch": "jest --coverage --watchAll",
@@ -17,18 +16,19 @@
     "test:coverage": "jest --coverage"
   },
   "devDependencies": {
+    "@liukewia/eslint-config": "^1.0.2",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.23",
     "chalk": "^5.0.1",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.29.4",
+    "husky": "^7.0.4",
     "jest": "^26.6.0",
     "lint-staged": "^12.3.7",
     "prettier": "^2.6.2",
     "stylelint": "^14.6.1",
     "stylelint-config-standard": "^25.0.0",
-    "typescript": "^4.6.3",
-    "yorkie": "^2.0.0"
+    "typescript": "^4.6.3"
   },
   "workspaces": {
     "packages": [
@@ -39,13 +39,10 @@
     "node": ">=12",
     "pnpm": ">=6"
   },
-  "gitHooks": {
-    "commit-msg": "node git-hooks/verifyCommit.js",
-    "pre-commit": "lint-staged"
-  },
   "lint-staged": {
     "*.{md,json,yaml,yml}": "prettier --write",
     "*.{js,mjs,jsx,ts,tsx}": "eslint --fix",
-    "*.{css,less,scss}": "stylelint --fix"
-  }
+    "*.{css,less,scss}": "prettier --write"
+  },
+  "packageManager": "pnpm@7.0.0-rc.3"
 }
