--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "chalk": "^4.1.2",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.29.4",
-    "jest": "^26.6.0",
+    "jest": "26.6.0",
     "lint-staged": "^12.3.7",
     "prettier": "^2.6.2",
     "stylelint": "^14.6.1",
