chore: update pnpm version

--- a/packages/use-model/package.json
+++ b/packages/use-model/package.json
@@ -21,8 +21,7 @@
   "files": [
     "dist",
     "es",
-    "lib",
-    "README.md"
+    "lib"
   ],
   "homepage": "https://github.com/liukewia/use-model",
   "dependencies": {
