--- a/package.json
+++ b/package.json
@@ -26,8 +26,6 @@
     "jest": "^26.6.0",
     "lint-staged": "^12.3.7",
     "prettier": "^2.6.2",
-    "stylelint": "^14.6.1",
-    "stylelint-config-standard": "^25.0.0",
     "typescript": "^4.6.3"
   },
   "workspaces": {
@@ -44,5 +42,5 @@
     "*.{js,mjs,jsx,ts,tsx}": "eslint --fix",
     "*.{css,less,scss}": "prettier --write"
   },
-  "packageManager": "pnpm@7.0.0-rc.3"
+  "packageManager": "pnpm@7.0.0"
 }
